# github-stats

./: Cargo.toml  README.md  go.mod  info.json  main.go
.github/workflows/: publish.yml
commands/: downloads.go  help.go  relations.go  repo.go  starred.go  user.go
src/: cli.rs  main.rs  utils.rs
src/commands/: all.rs  downloads.rs  followers.rs  mod.rs  relations.rs  releases.rs  repo.rs  user.rs
utils/: cli.go  utils.go
utils/ansi/: ansi.go
