[package]
name = "github-stats"
version = "0.1.0"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool for getting information on github repositories."
readme = "./README.md"
homepage = "https://github.com/cqb13/github-stats"
repository = "https://github.com/cqb13/github-stats"
keywords = ["cli", "github", "utility"]
categories = ["command-line-utilities"]
exclude = [".gitignore", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"

[[bin]]
name = "gstats"
path = "src/main.rs"
